# llm-project

./: .gitignore  .gitmodules  AGENTS.md  README.md  chat.py  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  doctest.yaml  flake8.yaml  load.yaml  test.yaml  tests.yaml
doctest_examples/: test.py
reader-whl/: chat.py
reader-whl/cmc_csci040_jiyeonkim-0.1.0.dist-info/: METADATA  RECORD
reader-whl/reader/: config.toml
tools/: __init__.py  calculate.py  cat.py  doctests.py  grep.py  ls.py  rm.py  valid_path.py  write_file.py  write_files.py
