# pyproject.toml

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-csci040-JiyeonKim"
version = "0.1.0"
description = "A pirate-style CLI chat app using the Groq API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq",
    "python-dotenv",
]

[project.scripts]
chat = "chat:repl"

[tool.setuptools]
py-modules = ["chat"]