# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-csci040-JiyeonKim"
version = "0.1.0"
description = "A pirate-style CLI chat app using the Groq API"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "groq",
    "python-dotenv",
]

[project.scripts]
chat = "chat:repl"

[tool.setuptools]
py-modules = ["chat"]